[package]
name = "clearstone-fusion"
version = "0.1.0"
description = "Clearstone Fusion — Solana intent settlement (fork of 1inch solana-fusion-protocol)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clearstone_fusion"

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
muldiv = "1.0.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
